Fix menu click on mobile

--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -37,6 +37,10 @@ h2 {
     font-size: 3.5rem;
 }
 
+#app {
+    overflow-y: hidden;
+}
+
 .subheading {
     text-transform: uppercase;
     font-weight: 500;
